<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.howaboutthis.satyaraj.videntify.IdentifyActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_identify">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251">

        <Button
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal"
            android:paddingEnd="36dp"
            android:paddingStart="36dp"
            android:text="@string/camera" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/or"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:paddingEnd="36dp"
            android:paddingStart="36dp"
            android:text="@string/pick_from_gallery" />

    </LinearLayout>

    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/info_4"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/info_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>