<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.howaboutthis.satyaraj.videntify.LanguageTranslatorActivity"
    tools:showIn="@layout/activity_language_translator">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_selector" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/language_selector"
        card_view:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <Spinner
            android:id="@+id/source_language"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:backgroundTint="@color/colorPrimary"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/swap"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:tint="@color/colorPrimary"
            android:src="@drawable/ic_swap_horiz_black_24dp"
            android:contentDescription="@string/swap" />

        <Spinner
            android:id="@+id/target_language"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:backgroundTint="@color/colorPrimary"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/language_translator"

        app:contentPadding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        card_view:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/source_language_canceler">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:id="@+id/source_language_text_view"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/close"
                    android:src="@drawable/ic_close"
                    android:contentDescription="@string/cancel" />

            </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="140dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:background="#ffffff"
            android:id="@+id/translator_edit_text"
            android:hint="@string/tap_to_enter_text"
            android:textSize="24sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/translate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"

        android:text="@string/translate"
        android:textColor="@android:color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_translator" />

    <android.support.v7.widget.CardView
        android:id="@+id/translated_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="8dp"
        app:contentPadding="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translate_button"
        card_view:cardBackgroundColor="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/target_language_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/translated_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/target_language_text_view"
                android:layout_marginTop="8dp"
                android:minHeight="140dp"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
    </ScrollView>